After 0.9
=========

 * Added test for context dependancy to inline css rendering.
   [dom]

 * Now uses restrictedTraverse() rather than getattr() for returning resources,
   to provide support for resources held within the ZODB.
   [dom]

 * Added a "is merging allowed?" option ("cookable" property) to determine where
   a resource can be merged (default True). This was added because objects in
   the ZODB may have variable permissions but be merged together. Whilst the
   objects are checked at each REQUEST, a new REQUEST won't actually be made
   each time because of the cache headers set on merged resources. If this
   worries you, the simplest solution is not to merge such resources, hence this
   option.
   [dom]

 * Added renameResource function with tests.
   [fschulze]

 * In Plone 2.1 plone_javascripts.js was removed, fixed tests by using
   jstest.js from our own skin.
   [dom]

0.9
===

 * Fixed function of enabled checkbox when adding css/javascript from ZMI.
   Added title field to the 'add stylesheet' part in the ZMI.
   [fschulze]

 * Added migration script for old instances. Just create a external method with
   id 'migrate_resourceregistries', Module Name 'ResourceRegistries.migrate' and
   Function Name 'migrate' and click on the 'Test' tab.
   [fschulze]

 * Cleaned up imports and whitespaces. Code standardization and small
   improvements. Fixed ZMI templates XHTML markup.
   [deo]

 * Refactored the two registries to use one common base class.
   [fschulze]

 * Refactored moving functions, so we have more possibilities. The API reflects
   the IOrderedContainer one.
   [fschulze]

 * Fix order of javascripts, the topmost in the management screen also needs
   to be the topmost in the resulting source.
   [fschulze]

 * Added debugmode where scripts are not concatenated. This will let things
   like the javascript console point to the right line-number. And makes it
   easier to develop, because there is no caching of the scripts.